--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
+    "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "less-loader": "6",
+    "loadsh": "^0.0.4",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -32,8 +36,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
     "vue-template-compiler": "^2.6.14"
   }
