--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:no-mock": "cross-env =MOCK=none vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.5",
     "core-js": "^3.8.3",
+    "cross-env": "^7.0.3",
+    "echarts": "^5.3.2",
     "less-loader": "6",
     "loadsh": "^0.0.4",
     "nprogress": "^0.2.0",
+    "resize-detector": "^0.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
